added images and basic html structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,96 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="logo">
+
+            </div>
+
+            <div class="links">
+                <button>
+
+                </button>
+            </div>
+        </nav>
+
+    </header> 
+
+    <section class="heroPic">
+        <img src="img/heroImg.jpg" alt="A map with money">
+
+    </section>
+
+    <section class="heroDescription">
+        <h1>
+            What We Do
+        </h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum molestias, minus minima iusto laudantium assumenda earum illum modi sunt a ratione cumque consequuntur voluptatibus delectus quibusdam? Mollitia fugit assumenda dolore?
+        </p>
+
+    </section>
+
+    <section class="mainPics">
+        <div class="topPics">
+            <div class="dashboard">
+                <div class="text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam architecto eaque fuga veniam corporis hic maxime fugit necessitatibus reprehenderit similique voluptatum rerum sequi exercitationem, accusantium ea sed ratione magni facilis?
+                </div>
+
+                <div class="imgContainer">
+                    <img src="img/dashboard.png" alt="Picture of dashboard screen">
+                </div>
+            </div>
+
+            <div class="userSummary">
+                <div class="text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus blanditiis eveniet itaque eos, quibusdam dolore eaque inventore. Aliquid consectetur, aperiam sed illum excepturi nam placeat libero possimus quasi praesentium eos!
+                </div>
+                <div class="imgContainer">
+                    <img src="img/userSummary.png" alt="Picture of user summary screen">
+                </div>
+            </div>
+
+        </div>
+
+        <div class="bottomPics">
+
+            <div class="mainTrips">
+
+                <div class="text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad fugit dolor perferendis numquam minima quo neque cupiditate quis! Dolor temporibus ullam earum asperiores fugit quo non, obcaecati soluta delectus consequuntur.
+                </div>
+
+                <div class="imgContainer">
+                    <img src="img/mainTrips.png" alt="Picture of main trips screen">
+                </div>
+            </div>
+
+            <div class="tripSummary">
+                <div class="text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quaerat tempora unde, doloribus quam magnam quibusdam provident pariatur adipisci fuga corporis molestias. Quo perspiciatis architecto quaerat sapiente alias fugiat odio.
+                </div>
+
+                <div class="imgContainer">
+                    <img src="img/tripSummary.png" alt="Picture of trip summary screen">
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <section class="testimonials">
+        <div class="first">
+
+        </div>
+
+        div.second
+    </section>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
