updated pic sizes will probably switch out main image though

--- a/index.html
+++ b/index.html
@@ -9,41 +9,53 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container"> 
     <header>
         <nav>
             <div class="logo">
-
+                <img src="img/Trip Split.png" alt="Trip Split logo">
             </div>
 
             <div class="links">
-                <button>
+                
+                <div class="logContainer">
+                    <a href="#">Log in</a>
+                </div>
 
+                <button>
+                    <a href="#">Sign up</a>
                 </button>
             </div>
         </nav>
 
     </header> 
 
-    <section class="heroPic">
+
+    <section class="hero">
+
         <img src="img/heroImg.jpg" alt="A map with money">
+  
+        <section class="heroDescription">
+            <h1>
+                What We Do
+            </h1>
 
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum molestias, minus minima iusto laudantium assumenda earum illum modi sunt a ratione cumque consequuntur voluptatibus delectus quibusdam? Mollitia fugit assumenda dolore?
+            </p>
+
+        </section>
     </section>
 
-    <section class="heroDescription">
-        <h1>
-            What We Do
-        </h1>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum molestias, minus minima iusto laudantium assumenda earum illum modi sunt a ratione cumque consequuntur voluptatibus delectus quibusdam? Mollitia fugit assumenda dolore?
-        </p>
-
-    </section>
+    
 
     <section class="mainPics">
         <div class="topPics">
             <div class="dashboard">
                 <div class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam architecto eaque fuga veniam corporis hic maxime fugit necessitatibus reprehenderit similique voluptatum rerum sequi exercitationem, accusantium ea sed ratione magni facilis?
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam architecto eaque fuga veniam corporis hic maxime fugit necessitatibus reprehenderit similique voluptatum rerum sequi exercitationem, accusantium ea sed ratione magni facilis?
+                    </p>
                 </div>
 
                 <div class="imgContainer">
@@ -53,8 +65,11 @@
 
             <div class="userSummary">
                 <div class="text">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus blanditiis eveniet itaque eos, quibusdam dolore eaque inventore. Aliquid consectetur, aperiam sed illum excepturi nam placeat libero possimus quasi praesentium eos!
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus blanditiis eveniet itaque eos, quibusdam dolore eaque inventore. Aliquid consectetur, aperiam sed illum excepturi nam placeat libero possimus quasi praesentium eos!
+                    <p>
                 </div>
+
                 <div class="imgContainer">
                     <img src="img/userSummary.png" alt="Picture of user summary screen">
                 </div>
@@ -65,9 +80,10 @@
         <div class="bottomPics">
 
             <div class="mainTrips">
-
                 <div class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad fugit dolor perferendis numquam minima quo neque cupiditate quis! Dolor temporibus ullam earum asperiores fugit quo non, obcaecati soluta delectus consequuntur.
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad fugit dolor perferendis numquam minima quo neque cupiditate quis! Dolor temporibus ullam earum asperiores fugit quo non, obcaecati soluta delectus consequuntur.
+                    </p>
                 </div>
 
                 <div class="imgContainer">
@@ -77,7 +93,9 @@
 
             <div class="tripSummary">
                 <div class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quaerat tempora unde, doloribus quam magnam quibusdam provident pariatur adipisci fuga corporis molestias. Quo perspiciatis architecto quaerat sapiente alias fugiat odio.
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quaerat tempora unde, doloribus quam magnam quibusdam provident pariatur adipisci fuga corporis molestias. Quo perspiciatis architecto quaerat sapiente alias fugiat odio.
+                    </p>
                 </div>
 
                 <div class="imgContainer">
@@ -91,14 +109,27 @@
 
     <section class="testimonials">
         <div class="first">
-
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab dolor autem excepturi dolorum incidunt libero, doloremque omnis tenetur nulla amet optio fuga possimus repellat enim aliquam atque perferendis minima eius!</p>
+            <img src="img/person1.jpg" alt="Testimonal Pic 1">
         </div>
 
-        div.second
+        <div class="second">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum animi id debitis provident corrupti adipisci voluptatibus fugiat quis, assumenda nulla temporibus repudiandae tempore dicta. Officia illum delectus nesciunt ex vel.</p>
+            <img src="img/person2.jpg" alt="Tesimonial Pic 2">
+        </div>
+
+        <div class="third">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita consequuntur nesciunt debitis rerum totam impedit? Similique expedita maxime, soluta eos illo error cum sint facilis ad sunt repellendus nam corrupti?</p>
+            <img src="img/person3.jpg" alt="Testimonial Pic 3">
+        </div>
     </section>
 
     <footer>
-
+        <div class="address">
+            123 Main Street Capitola, CA 958351
+            emailexample@email.com
+        </div>
     </footer>
+    </div>
 </body>
 </html>
