almost done with landing page

--- a/index.html
+++ b/index.html
@@ -33,18 +33,16 @@
 
     <section class="hero">
 
-        <img src="img/heroImg.jpg" alt="A map with money">
-  
-        <section class="heroDescription">
-            <h1>
-                What We Do
-            </h1>
+        <div class="heroImgs">
+            <img id="map" src="img/heroImg.jpg" alt="A map with money">
+        </div>
 
+        <div class="heroText">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum molestias, minus minima iusto laudantium assumenda earum illum modi sunt a ratione cumque consequuntur voluptatibus delectus quibusdam? Mollitia fugit assumenda dolore?
+                    Keeps track of group expenses. <br> On trips. At dinners. For rides. <br> No more IOU’s.
             </p>
+        </div>
 
-        </section>
     </section>
 
     
@@ -54,7 +52,7 @@
             <div class="dashboard">
                 <div class="text">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam architecto eaque fuga veniam corporis hic maxime fugit necessitatibus reprehenderit similique voluptatum rerum sequi exercitationem, accusantium ea sed ratione magni facilis?
+                        Track your friends' vacations
                     </p>
                 </div>
 
@@ -66,7 +64,7 @@
             <div class="userSummary">
                 <div class="text">
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus blanditiis eveniet itaque eos, quibusdam dolore eaque inventore. Aliquid consectetur, aperiam sed illum excepturi nam placeat libero possimus quasi praesentium eos!
+                        Track your up-to-date expenses on your trip
                     <p>
                 </div>
 
@@ -82,7 +80,7 @@
             <div class="mainTrips">
                 <div class="text">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad fugit dolor perferendis numquam minima quo neque cupiditate quis! Dolor temporibus ullam earum asperiores fugit quo non, obcaecati soluta delectus consequuntur.
+                        Track your past and future trips
                     </p>
                 </div>
 
@@ -94,7 +92,7 @@
             <div class="tripSummary">
                 <div class="text">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quaerat tempora unde, doloribus quam magnam quibusdam provident pariatur adipisci fuga corporis molestias. Quo perspiciatis architecto quaerat sapiente alias fugiat odio.
+                        Track all transactions on your current trip
                     </p>
                 </div>
 
@@ -108,26 +106,48 @@
     </section>
 
     <section class="testimonials">
-        <div class="first">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab dolor autem excepturi dolorum incidunt libero, doloremque omnis tenetur nulla amet optio fuga possimus repellat enim aliquam atque perferendis minima eius!</p>
-            <img src="img/person1.jpg" alt="Testimonal Pic 1">
+
+        <div class="firstCol">
+            <div class="testImg">
+                <img src="img/person1.jpg" alt="Testimonal Pic 1">
+            </div>
         </div>
 
-        <div class="second">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum animi id debitis provident corrupti adipisci voluptatibus fugiat quis, assumenda nulla temporibus repudiandae tempore dicta. Officia illum delectus nesciunt ex vel.</p>
-            <img src="img/person2.jpg" alt="Tesimonial Pic 2">
+        <div class="secondCol">
+            <div class="speech-bubble">
+                <p>TripSplit is a godsend! I love not having to do a bunch of math after traveling with my friends.</p>
+                <p class="strong">-Rebecca</p>
+            </div>
+
+            <div class="testImg">
+                <img src="img/person2.jpg" alt="Tesimonial Pic 2">
+            </div>
         </div>
 
-        <div class="third">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita consequuntur nesciunt debitis rerum totam impedit? Similique expedita maxime, soluta eos illo error cum sint facilis ad sunt repellendus nam corrupti?</p>
-            <img src="img/person3.jpg" alt="Testimonial Pic 3">
+        <div class="thirdCol">
+            <div class="speech-bubble">
+                <p>I can't imagine traveling with TripSplit now!</p>
+                <p class="strong">-Michael</p>
+            </div>
+
+            <div class="testImg">
+                <img src="img/person3.jpg" alt="Testimonial Pic 3">
+            </div>
+        </div>
+
+        <div class="fourthCol">
+            <div class="speech-bubble">
+                <p>Dealing with the financial part of the vacationing was always such a hastle. But this app has made dealing with money while trying to break from stress such a breeze. Yes, there are other apps out these doing similar things, but they can't compare to how user-friendly TripSplit it is. It's so important to actually be able to enjoy your vacation without worrying about the awkwardness settling up after.</p>
+                <p class="strong">-Normani</p>
+            </div>
         </div>
     </section>
 
     <footer>
         <div class="address">
-            123 Main Street Capitola, CA 958351
-            emailexample@email.com
+            <p>Contact</p>
+            <p>123 Main Street Capitola, CA 958351</p>
+            <p>emailexample@email.com</p>
         </div>
     </footer>
     </div>
