made the table for the about page

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 </div>
 
                 <div class="links">
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About Us</a>
                     <a href="#">Log in</a>
-                    
-                    <a href="#">About Us</a>
 
                     <button>
                         <a href="#">Sign up</a>
