everything before standup

--- a/about.html
+++ b/about.html
@@ -39,8 +39,8 @@
                         <h3 class="card-title">Taylor Watson</h3>
                         <p class="card-text">UX Designer</p>
                         <div class="socialLinks">
-                            <a href=#><i class="fab fa-github"></i></a>
-                            <i class="fab fa-linkedin"></i>
+                            <a href=#><i class="fab fa-github fa-4x"></i></a>
+                            <a href=#><i class="fab fa-linkedin fa-4x"></i></a>
                         </div>
                     </div>
                 </div>
@@ -51,8 +51,8 @@
                         <h3 class="card-title">Katie McKnight</h3>
                         <p class="card-text">Backend Developer</p>
                         <div class="socialLinks">
-                            <a href=#><i class="fab fa-github"></i></a>
-                            <i class="fab fa-linkedin"></i>
+                            <a href=#><i class="fab fa-github fa-4x"></i></a>
+                            <a href=#><i class="fab fa-linkedin fa-4x"></i></a>
                         </div>
                     </div>
                 </div>
@@ -63,8 +63,8 @@
                         <h3 class="card-title">Joseph Nevarez</h3>
                         <p class="card-text">Web UI Designer</p>
                         <div class="socialLinks">
-                            <a href=#><i class="fab fa-github"></i></a>
-                            <i class="fab fa-linkedin"></i>
+                            <a href=#><i class="fab fa-github fa-4x"></i></a>
+                            <a href=#><i class="fab fa-linkedin fa-4x"></i></a>
                         </div>
                     </div>
                 </div>
@@ -77,8 +77,8 @@
                         <h3 class="card-title">Danny Manzietti</h3>
                         <p class="card-text">Web UI Designer</p>
                         <div class="socialLinks">
-                            <a href=#><i class="fab fa-github"></i></a>
-                            <i class="fab fa-linkedin"></i>
+                            <a href=#><i class="fab fa-github fa-4x"></i></a>
+                            <a href=#><i class="fab fa-linkedin fa-4x"></i></a>
                         </div>
                     </div>
                 </div>
@@ -89,8 +89,8 @@
                         <h3 class="card-title">David Johnson</h3>
                         <p class="card-text">Web UI Designer</p>
                         <div class="socialLinks">
-                            <a href=#><i class="fab fa-github"></i></a>
-                            <i class="fab fa-linkedin"></i>
+                            <a href=#><i class="fab fa-github fa-4x"></i></a>
+                            <a href=#><i class="fab fa-linkedin fa-4x"></i></a>
                         </div>
                     </div>
                 </div>
@@ -101,8 +101,8 @@
                         <h3 class="card-title">Joshua Doan</h3>
                         <p class="card-text">Frontend Developer</p>
                         <div class="socialLinks">
-                            <a href=#><i class="fab fa-github"></i></a>
-                            <i class="fab fa-linkedin"></i>
+                            <a href=#><i class="fab fa-github fa-4x"></i></a>
+                            <a href=#><i class="fab fa-linkedin fa-4x"></i></a>
                         </div>
                     </div>
                 </div>
@@ -115,8 +115,8 @@
                             <h3 class="card-title">Ahmad Guenoun</h3>
                             <p class="card-text">Frontend Developer</p>
                             <div class="socialLinks">
-                                <a href=#><i class="fab fa-github"></i></a>
-                                <i class="fab fa-linkedin"></i>
+                                <a href=#><i class="fab fa-github fa-4x"></i></a>
+                                <a href=#><i class="fab fa-linkedin fa-4x"></i></a>
                             </div>
                         </div>
                     </div>
@@ -127,8 +127,8 @@
                             <h3 class="card-title">Sean McDonnell</h3>
                             <p class="card-text">Frontend Developer</p>
                             <div class="socialLinks">
-                                <a href=#><i class="fab fa-github"></i></a>
-                                <i class="fab fa-linkedin"></i>
+                                <a href=#><i class="fab fa-github fa-4x"></i></a>
+                                <a href=#><i class="fab fa-linkedin fa-4x"></i></a>
                             </div>
                         </div>
                     </div>
@@ -139,37 +139,22 @@
                             <h3 class="card-title">Michael Chrupcala</h3>
                             <p class="card-text">Frontend Developer</p>
                             <div class="socialLinks">
-                                <a href=#><i class="fab fa-github"></i></a>
-                                <i class="fab fa-linkedin"></i>
+                                <a href=#><i class="fab fa-github fa-4x"></i></a>
+                                <a href=#><i class="fab fa-linkedin fa-4x"></i></a>
                             </div>
                         </div>
                     </div>
-                </div> <!--closes cardgroup3-->
-        </div>
+            </div> <!--closes cardgroup3-->
+        </div> <!--closes cardContainer-->
+
+        <footer>
+            <div class="address">
+                <p>Contact</p><br>
+                <p>123 Main Street Capitola, CA 958351</p>
+                <p>emailexample@email.com</p>
+            </div>
+        </footer>
     </div> <!--closes body container-->
 </body>
 </html>
 
-
-<!-- 1: taylor
-1. katie
-1. me
-
-2. danny
-2. david
-2. josh
-
-3. ahmad
-3. sean
-3.michael
-
-
-Danny Manzietti - UI
-David Johnson - UI
-Joshua Doan - 
-Michael Chrupcala - 
-Sean McDonnell - 
-Ahmad Guenoun - 
-Taylor Watson - UX Designer
-Katie McKnight - backend developer
-ME -->
