finsihed though I'm not fully satisfied with the images sizing on the landing page's mobile view

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="img/David.png" class="card-img-top" alt="Pic of David">
+                    <img src="img/david.jpg" class="card-img-top" alt="Pic of David">
                     <div class="card-body">
                         <h3 class="card-title">David Johnson</h3>
                         <p class="card-text">Web UI Designer</p>
