--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
             <div class="fourthCol">
                 <div class="speech-bubble">
-                    <p>Dealing with the financial part of the vacationing was always such a hastle. But this app has made dealing with money while trying to break from stress such a breeze. Yes, there are other apps out these doing similar things, but they can't compare to how user-friendly TripSplit it is. It's so important to actually be able to enjoy your vacation without worrying about the awkwardness settling up after.</p>
+                    <p>The financial part of the vacationing was always such a hastle. But this app has made dealing with money while trying to break from stress such a breeze. Yes, there are other apps out these, but they can't compare to TripSplit. It's so important to actually be able to enjoy your vacation without worrying about the awkwardness settling up after.</p>
                     <p class="strong">-Normani</p>
                 </div>
             </div>
