added links to login and register

--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
                 <div class="links">
                     <a href="index.html">Home</a>
                     <a href="about.html">About Us</a>
-                    <a href="#">Log in</a>
+                    <a href="https://tripsplit.now.sh/login">Log in</a>
 
                     <button>
-                        <a href="#">Sign up</a>
+                        <a href="https://tripsplit.now.sh/register">Sign up</a>
                     </button>
                 </div>
             </nav>
